[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "youtubedl"
version = "0.1.0"
[tool.poetry.dependencies]
ffmpeg = "^1.4"
python = "^3.8"
youtube-dl = "^2021.12.17"
[tool.poetry.dev-dependencies]
